Add support to terragrunt

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,11 @@ inputs:
   tf_actions_version:
     description: 'Terraform version to install.'
     required: true
+    default: 'latest'
+  tg_actions_version:
+    description: 'Terragrunt version to install.'
+    required: true
+    default: 'latest'
   tf_actions_cli_credentials_hostname:
     description: 'Hostname for the CLI credentials file.'
     default: 'app.terraform.io'
