Run actions with Terragrunt

--- a/action.yml
+++ b/action.yml
@@ -1,12 +1,12 @@
-name: 'Terraform GitHub Actions'
-description: 'Runs Terraform commands via GitHub Actions.'
-author: 'HashiCorp, Inc. Terraform Team <terraform@hashicorp.com>'
+name: 'Terragrunt GitHub Actions'
+description: 'Runs Terragrunt commands via GitHub Actions.'
+author:  'HashiCorp, Inc. Terraform Team <terraform@hashicorp.com>'
 branding:
-  icon: 'terminal'
+  icon: 'cloud'
   color: 'purple'
 inputs:
   tf_actions_subcommand:
-    description: 'Terraform subcommand to execute.'
+    description: 'Terraform or Terragrunt subcommand to execute.'
     required: true
   tf_actions_version:
     description: 'Terraform version to install.'
@@ -25,20 +25,20 @@ inputs:
     description: 'Whether or not to comment on pull requests.'
     default: true
   tf_actions_working_dir:
-    description: 'Terraform working directory.'
+    description: 'Terragrunt working directory.'
     default: '.'
   tf_actions_fmt_write:
-    description: 'Write Terraform fmt changes to source files.'
+    description: 'Write Terragrunt fmt changes to source files.'
     default: false
 outputs:
   tf_actions_output:
-    description: 'The Terraform outputs in JSON format.'
+    description: 'The Terragrunt outputs in JSON format.'
   tf_actions_plan_has_changes:
-    description: 'Whether or not the Terraform plan contained changes.'
+    description: 'Whether or not the Terragrunt plan contained changes.'
   tf_actions_plan_output:
-    description: 'The Terraform plan output.'
+    description: 'The Terragrunt plan output.'
   tf_actions_fmt_written:
-    description: 'Whether or not the Terraform formatting was written to source files.'
+    description: 'Whether or not the Terragrunt formatting was written to source files.'
 runs:
   using: 'docker'
   image: './Dockerfile'
