--- a/action.yml
+++ b/action.yml
@@ -56,5 +56,10 @@ outputs:
   tf_actions_fmt_written:
     description: 'Whether or not the Terragrunt formatting was written to source files.'
 runs:
-  using: 'docker'
-  image: docker://ppapishetty0209/terragrunt-github-actions:latest
+  using: 'composite'
+  steps:
+    - run: ./src/main.sh
+      shell: bash
+  
+  
+  #image: docker://ppapishetty0209/terragrunt-github-actions:latest
