--- a/action.yml
+++ b/action.yml
@@ -58,7 +58,11 @@ outputs:
 runs:
   using: 'composite'
   steps:
-    - run: ${HOME}/src/main.sh
+    - run: |
+        echo "Hello World"
+        ls -lrt
+        echo $HOME
+        src/main.sh
       shell: bash
   
   
