--- a/action.yml
+++ b/action.yml
@@ -56,14 +56,18 @@ outputs:
   tf_actions_fmt_written:
     description: 'Whether or not the Terragrunt formatting was written to source files.'
 runs:
-  using: 'composite'
-  steps:
-    - run: |
-        echo "Hello World"
-        ls -lrt
-        echo $HOME
-        src/main.sh
-      shell: bash
-  
-  
-  #image: docker://ppapishetty0209/terragrunt-github-actions:latest
+  env:
+    DOCKER: '/usr/local/bin/docker'
+  using: 'docker'
+  image: docker://ppapishetty0209/terragrunt-github-actions:latest
+
+
+
+#  using: 'composite'
+#  steps:
+#    - run: |
+#        echo "Hello World"
+#        ls -lrt
+#        echo $HOME
+#        src/main.sh
+#      shell: bash
