--- a/action.yml
+++ b/action.yml
@@ -56,8 +56,8 @@ outputs:
   tf_actions_fmt_written:
     description: 'Whether or not the Terragrunt formatting was written to source files.'
 runs:
-#  env:
-#    DOCKER: '/usr/local/bin/docker'
+  env:
+    HOME: '/runner/home'
   using: 'docker'
   image: './Dockerfile'
 #  image: docker://ppapishetty0209/terragrunt-github-actions:latest
