--- a/action.yml
+++ b/action.yml
@@ -56,21 +56,21 @@ outputs:
   tf_actions_fmt_written:
     description: 'Whether or not the Terragrunt formatting was written to source files.'
 runs:
-  env:
-    HOME: '/runner/home'
-  using: 'docker'
-  image: './Dockerfile'
+#  env:
+#    HOME: '/runner/home'
+#  using: 'docker'
+#  image: './Dockerfile'
 #  image: docker://ppapishetty0209/terragrunt-github-actions:latest
 #  args: 
 #    - --user runner
 
 
 
-#  using: 'composite'
-#  steps:
-#    - run: |
-#        echo "Hello World"
-#        ls -lrt
-#        echo $HOME
-#        src/main.sh
-#      shell: bash
+  using: 'composite'
+  steps:
+    - run: |
+        echo "Hello World"
+        ls -lrt
+        echo $HOME
+        src/main.sh
+      shell: bash
