fix: release workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,6 +33,7 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:latest
             ghcr.io/ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ github.sha }}
             ghcr.io/ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ steps.version.outputs.new_version }}
+            ${{ github.repository_owner }}/terragrunt-github-actions:${{ github.sha }}
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
