--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,8 +34,8 @@ jobs:
           push: false
           tags: |
             ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:latest
-            ghcr.io/ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ github.sha }}
-            ghcr.io/ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ steps.version.outputs.new_version }}
+            ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ steps.version.outputs.new_version }}
             ${{ github.repository_owner }}/terragrunt-github-actions:${{ github.sha }}
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
