--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -61,6 +61,7 @@ jobs:
         shell: bash
         env:
           GIT_TAG: "${{ steps.version.outputs.new_version }}"
+          GITHUB_OWNER: "${{ github.repository_owner }}"
         run: |
           make template
       - uses: stefanzweifel/git-auto-commit-action@v4
