--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,10 @@ on:
       - main
 jobs:
   release:
+    permissions:
+      packages: write
+      contents: write
+
     name: Create GitHub release
     runs-on: ubuntu-latest
     steps:
@@ -31,8 +35,8 @@ jobs:
           push: false
           tags: |
             ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:latest
-            ghcr.io/ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ github.sha }}
-            ghcr.io/ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ steps.version.outputs.new_version }}
+            ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ steps.version.outputs.new_version }}
             ${{ github.repository_owner }}/terragrunt-github-actions:${{ github.sha }}
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
@@ -51,12 +55,13 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:latest
-            ghcr.io/ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ github.sha }}
-            ghcr.io/ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ steps.version.outputs.new_version }}
+            ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/terragrunt-github-actions:${{ steps.version.outputs.new_version }}
       - name: Template action metadata file
         shell: bash
         env:
           GIT_TAG: "${{ steps.version.outputs.new_version }}"
+          GITHUB_OWNER: "${{ github.repository_owner }}"
         run: |
           make template
       - uses: stefanzweifel/git-auto-commit-action@v4
