fix: pr templating
This fixes the PR workflow templating step, which didn't include a required environment variable.

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -53,6 +53,7 @@ jobs:
         shell: bash
         env:
           GIT_TAG: "${{ steps.version.outputs.new_version }}-next"
+          GITHUB_OWNER: "${{ github.repository_owner }}"
         run: |
           make template
       - uses: stefanzweifel/git-auto-commit-action@v4
