--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -39,6 +39,7 @@ jobs:
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
+          skip-files: 'root/.tfenv/versions/**/terraform'
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
       - name: Build and push
